<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <TextView
        android:id="@+id/addMedication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/add_medication"
        android:textColor="@android:color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/medicationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/medication_name"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMedication"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/dosageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/dosage"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationInput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/recurrenceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/recurrence"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toEndOf="@+id/dosageText"
        app:layout_constraintTop_toBottomOf="@+id/medicationInput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/end_date"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/timesOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif"
        android:text="@string/times_of_day"
        android:textColor="@android:color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/medicationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_top_rounded"
        android:hint="@string/medication_name"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="#373535"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medicationName" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_top_rounded"
        android:ems="10"
        android:hint="5"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dosageText"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/recurrenceText">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/edittext_top_rounded"
            android:gravity="center_vertical"
             />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center_vertical"
            app:tint="#2C2929"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/dropdown_arrow"

            android:src="@drawable/down" />
    </FrameLayout>

    <Button
        android:id="@+id/dateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_top_rounded"
        android:gravity="start|center"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/choose_date"
        android:textAllCaps="false"
        android:textColor="#373535"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <GridLayout
        android:id="@+id/chipGrid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:rowCount="2"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timesOfDay"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_morning"
            style="@style/customChipStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginEnd="8dp"
            android:text="@string/morning"
            android:textSize="16sp"
            android:textStyle="bold"
            android:checkable="true"
            app:checkedIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_afternoon"
            style="@style/customChipStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginStart="8dp"
            android:text="@string/afternoon"
            android:textSize="16sp"
            android:textStyle="bold"
            android:checkable="true"
            app:checkedIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_evening"
            style="@style/customChipStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/evening"
            android:textSize="16sp"
            android:textStyle="bold"
            android:checkable="true"
            app:checkedIconVisible="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_night"
            style="@style/customChipStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/night"
            android:textSize="16sp"
            android:textStyle="bold"
            android:checkable="true"
            app:checkedIconVisible="true"/>

    </GridLayout>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGrid"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>